--- a/RegularHTMLWebsite/sd2-docs.html
+++ b/RegularHTMLWebsite/sd2-docs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://kit.fontawesome.com/6a06e2bafc.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -45,18 +46,18 @@
                 <hr>
             </ul>
         </div>
-        <div style="margin: 3rem;">
+        <div style="margin: 3rem; max-height: 95dvh; overflow-y: scroll;">
             <h5 style="text-decoration: underline;">Senior Design 2 Documentation:</h5>
             <ul>
                 <li>
-                    <a href="../../../assets/sd2-assets/Group18_8_Page_Conference_Paper.pdf" download="Group18_Conference_Paper"
+                    <a href="assets/sd2-assets/Group18_8_Page_Conference_Paper.pdf" download="Group18_Conference_Paper"
                         style="margin-right: 5px;">
                         8 Page Conference Paper
                         <i class="fa-solid fa-download"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="../../../assets/sd2-assets/Group_18_CDR_Presentation.pdf" download="Group18_CDR_Presentation_Slides"
+                    <a href="assets/sd2-assets/Group_18_CDR_Presentation.pdf" download="Group18_CDR_Presentation_Slides"
                         style="margin-right: 5px;">
                         CDR Presentation Slides
                         <i class="fa-solid fa-download"></i>
@@ -109,5 +110,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+    </style>
 </body>
 </html>
