--- a/RegularHTMLWebsite/about.html
+++ b/RegularHTMLWebsite/about.html
@@ -19,7 +19,7 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li>
-                    <a class="nav-link text-white" href="about.html">
+                    <a class="nav-link text-white active" href="about.html">
                         <i class="fa-solid fa-address-card" style="margin-right: 0.5rem;"></i>
                         About
                     </a>
@@ -83,9 +83,7 @@
                 application which the PC will use to interpret the
                 hardware's output. Additionally, the device's firmware
                 will manage communication between the device and the
-                PC. The requirements for these systems, as well as the
-                technology used to accomplish these tasks, will be
-                expanded upon in further sections.
+                PC.
             </p>
             <div class="grid" style="justify-content: center;">
                 <img src="assets/about-assets/final-pcb-design.png" alt="pcb-design"
