--- a/RegularHTMLWebsite/sd1-docs.html
+++ b/RegularHTMLWebsite/sd1-docs.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-white" href="sd1-docs.html">
+                    <a class="nav-link text-white active" href="sd1-docs.html">
                         <i class="fa-solid fa-file" style="margin-right: 0.5rem;"></i>
                         SD1 Docs (EEL4914)
                     </a>
