--- a/RegularHTMLWebsite/sd2-docs.html
+++ b/RegularHTMLWebsite/sd2-docs.html
@@ -31,7 +31,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link text-white" href="sd2-docs.html">
+                    <a class="nav-link text-white active" href="sd2-docs.html">
                         <i class="fa-solid fa-file" style="margin-right: 0.5rem;"></i>
                         SD2 Docs (EEL4915)
                     </a>
@@ -75,12 +75,23 @@
                     <!-- Todo -->
                     <a download="Group18_Final_Presentation_Slides"
                         style="margin-right: 5px;">
-                        Final Presentation Slide
+                        Final Presentation Slides
                         <i class="fa-solid fa-download"></i>
                         <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
                             (To be Added)
                         </span>
                     </a>
+                    <ul>
+                        <li>
+                            <a target="_blank">
+                                Video Link
+                                <i class="fa-solid fa-video"></i>
+                                <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
+                                    (To be Added)
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <!-- Todo -->
