Added home screen image and description for sd2 pg

--- a/RegularHTMLWebsite/about.html
+++ b/RegularHTMLWebsite/about.html
@@ -47,7 +47,7 @@
             </ul>
         </div>
         <div style="margin-top: 3rem; max-height: 95dvh; overflow-y: scroll; padding-left: 1rem; padding-right: 1rem;">
-            <h5 style="text-decoration: underline;">About the Programmable Trackpad:</h5>
+            <h5 style="text-decoration: underline; text-align: center;">About the Programmable Trackpad:</h5>
             <p>
                 On the market today, there exists a subset of a
                 common computer peripheral meant to boost a basic
