sd1 docs styling change

--- a/RegularHTMLWebsite/sd1-docs.html
+++ b/RegularHTMLWebsite/sd1-docs.html
@@ -47,24 +47,7 @@
             </ul>
         </div>
         <div style="margin: 3rem; max-height: 95dvh; overflow-y: scroll;">
-            <h5 style="text-decoration: underline;">Initial Project Description:</h5>
-            <p>
-                On the market today, there exists a subset of a common computer peripheral meant to boost a basic end-user's
-                productivity. This product is the programmable mouse. The concept is simple; it is a computer mouse that contains
-                several extra buttons that the user can map to any shortcut or command which he/she chooses. The added convenience
-                of these extra buttons means that a user can save valuable time when performing common, repetitive tasks. Currently,
-                this type of device only exists for the mouse, but not for the trackpad which has millions of users every day. This
-                is where our project comes in. Our purpose in creating the Programmable Trackpad is to bring this type of technology
-                to the trackpad, for users who prefer to use a trackpad over a mouse. Our trackpad will contain a suite of macro
-                keys and rotary encoders, all of which end users can program themselves. With these, trackpad users will be granted
-                the same convenience and functionality as programmable mouse users in a compact and ergonomic package. This device
-                is intended to completely replace the default trackpad on a traditional laptop.
-            </p>
-            <div style="display: flex; flex-wrap: wrap; margin-top: 3rem;">
-                <img src="assets/sd1-assets/touchpad-design-diagram.png" alt="sd1-design-diagram" style="width: 400px;">
-                <img src="assets/sd1-assets/sd1-design-sketch.png" alt="sd1-design-sketch" style="width: 600px;">
-            </div>
-            <h5 style="text-decoration: underline; margin-top: 3rem;">Senior Design 1 Documentation:</h5>
+            <h5 style="text-decoration: underline;">Senior Design 1 Documentation:</h5>
             <ul>
                 <li>
                     <div style="display: flex; align-items: center;">
@@ -85,6 +68,23 @@
                     </div>
                 </li>
             </ul>
+            <h5 style="text-decoration: underline; margin-top: 1.5rem;">Initial Project Description:</h5>
+            <p>
+                On the market today, there exists a subset of a common computer peripheral meant to boost a basic end-user's
+                productivity. This product is the programmable mouse. The concept is simple; it is a computer mouse that contains
+                several extra buttons that the user can map to any shortcut or command which he/she chooses. The added convenience
+                of these extra buttons means that a user can save valuable time when performing common, repetitive tasks. Currently,
+                this type of device only exists for the mouse, but not for the trackpad which has millions of users every day. This
+                is where our project comes in. Our purpose in creating the Programmable Trackpad is to bring this type of technology
+                to the trackpad, for users who prefer to use a trackpad over a mouse. Our trackpad will contain a suite of macro
+                keys and rotary encoders, all of which end users can program themselves. With these, trackpad users will be granted
+                the same convenience and functionality as programmable mouse users in a compact and ergonomic package. This device
+                is intended to completely replace the default trackpad on a traditional laptop.
+            </p>
+            <div style="display: flex; flex-wrap: wrap; margin-top: 3rem;">
+                <img src="assets/sd1-assets/touchpad-design-diagram.png" alt="sd1-design-diagram" style="width: 400px;">
+                <img src="assets/sd1-assets/sd1-design-sketch.png" alt="sd1-design-sketch" style="width: 600px;">
+            </div>
         </div>        
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
