--- a/RegularHTMLWebsite/sd2-docs.html
+++ b/RegularHTMLWebsite/sd2-docs.html
@@ -47,20 +47,6 @@
             </ul>
         </div>
         <div style="margin: 3rem; max-height: 95dvh; overflow-y: scroll;">
-            <div style="margin-bottom: 2rem;">
-                <h5 class="text-center" style="text-decoration: underline;">About the Project</h5>
-                <p>
-                    Our project, the Programmable Trackpad, is a peripheral device for consumer PCs that behaves like a laptop trackpad,
-                    while also including programmable function keys. These functions can be configured by the user through a software
-                    interface, allowing the user to customize his/her experience. The intent of the device is to fully replace the user's
-                    existing mouse, while also providing functionality that can be found in consumer-level programmable mice or streaming
-                    peripherals. While programmable mice do exist on the market currently, there is no standard option for trackpad users
-                    who wish to enhance their experience with programmable functions. This is the niche that our product fills. The device
-                    interfaces with the user's PC over USB or Bluetooth. The USB connection also allows the device to charge its
-                    rechargeable battery. This flexibility makes the device convenient for all PC users, regardless of whether they prefer
-                    wired or wireless connections.
-                </p>
-            </div>
             <h5 style="text-decoration: underline;">Senior Design 2 Documentation:</h5>
             <ul>
                 <li>
@@ -130,6 +116,20 @@
                     </a>
                 </li>
             </ul>
+            <div style="margin-top: 1.5rem;">
+                <h5 style="text-decoration: underline;">About the Project</h5>
+                <p>
+                    Our project, the Programmable Trackpad, is a peripheral device for consumer PCs that behaves like a laptop trackpad,
+                    while also including programmable function keys. These functions can be configured by the user through a software
+                    interface, allowing the user to customize his/her experience. The intent of the device is to fully replace the user's
+                    existing mouse, while also providing functionality that can be found in consumer-level programmable mice or streaming
+                    peripherals. While programmable mice do exist on the market currently, there is no standard option for trackpad users
+                    who wish to enhance their experience with programmable functions. This is the niche that our product fills. The device
+                    interfaces with the user's PC over USB or Bluetooth. The USB connection also allows the device to charge its
+                    rechargeable battery. This flexibility makes the device convenient for all PC users, regardless of whether they prefer
+                    wired or wireless connections.
+                </p>
+            </div>
         </div>        
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
