Added docs, video links, and updated styling

--- a/RegularHTMLWebsite/sd2-docs.html
+++ b/RegularHTMLWebsite/sd2-docs.html
@@ -66,42 +66,31 @@
                         <li>
                             <a href="https://youtu.be/Hu7VJwqUrmo" target="_blank">
                                 Video Link
-                                <i class="fa-solid fa-video"></i>
+                                <i class="fa-solid fa-video" style="color: red;"></i>
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <!-- Todo -->
-                    <a download="Group18_Final_Presentation_Slides"
+                    <a href="assets/sd2-assets/Group18_Final_Presentation_Slides.pdf" download="Group18_Final_Presentation_Slides"
                         style="margin-right: 5px;">
                         Final Presentation Slides
                         <i class="fa-solid fa-download"></i>
-                        <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
-                            (To be Added)
-                        </span>
                     </a>
                     <ul>
                         <li>
-                            <a target="_blank">
+                            <a href="https://youtu.be/w4j7L3RAr1M" target="_blank">
                                 Video Link
-                                <i class="fa-solid fa-video"></i>
-                                <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
-                                    (To be Added)
-                                </span>
+                                <i class="fa-solid fa-video" style="color: red;"></i>
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <!-- Todo -->
-                    <a download="Group18_Final_Demonstration_Video"
+                    <a href="https://youtu.be/hQ0A6uMiP9o" target="_blank"
                         style="margin-right: 5px;">
                         Final Demonstration Video
-                        <i class="fa-solid fa-download"></i>
-                        <span style="font-style: italic; font-size: 10px; margin-left: 5px;">
-                            (To be Added)
-                        </span>
+                        <i class="fa-solid fa-video" style="color: red;"></i>
                     </a>
                 </li>
                 <li>
@@ -129,6 +118,9 @@
                     rechargeable battery. This flexibility makes the device convenient for all PC users, regardless of whether they prefer
                     wired or wireless connections.
                 </p>
+            </div>
+            <div style="display: flex; justify-content: center;">
+                <img src="assets/sd2-assets/final-demo-img.png" alt="final-demo-img" style="width: 40rem; border-radius: 6px;">
             </div>
         </div>        
     </div>
