--- a/RegularHTMLWebsite/about.html
+++ b/RegularHTMLWebsite/about.html
@@ -92,6 +92,7 @@
                     class="col-6" style="min-width: 200px; max-width: 400px;">
                 <img src="assets/about-assets/final-application-design.png" alt="application-design"
                     class="col-6" style="max-width: 400px;">
+                <img src="assets/home-screen-image.png" alt="final-design" style="width: 27rem; border-radius: 6px; margin-top: 2rem;">
             </div>
         </div>
     </div>
