--- a/RegularHTMLWebsite/index.html
+++ b/RegularHTMLWebsite/index.html
@@ -59,14 +59,18 @@
                         program these shortcuts themselves with a simple computer application that requires no specialized knowledge. Now, PC
                         users who prefer a trackpad can take advantage of the same convenience one would receive from a programmable mouse.
                     </p>
-                    <img src="assets/home-screen-image.png" alt="final-design" style="width: 30rem;">
+                    <img src="assets/sd2-assets/final-demo-img.png" alt="final-design" style="width: 30rem; border-radius: 6px;">
                   </main>
             </div>            
         </div>
     </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <style>
+        ::-webkit-scrollbar {
+            display: none;
+        }
+    </style>
 </body>
 </html>
